--- a/.travis.yml
+++ b/.travis.yml
@@ -6,3 +6,5 @@ services:
 before_install:
   - docker build -t cozco/docker-react -f Dockerfile.dev . 
 
+script:
+  - docker run -e CI=true cozco/docker-react npm run test
