--- a/.travis.yml
+++ b/.travis.yml
@@ -18,5 +18,5 @@ deploy:
   bucket_path: "docker-react"
   on:
     branch: master
-  access_key_id: $AWS_Access_Key
-  secret_access_key: $AWS_Secret_Key
+  access_key_id: $AWS_ACCESS_KEY
+  secret_access_key: "$AWS_SECRET_KEY"
